--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,8 @@ python-dotenv==1.0.1
 python-jose==3.4.0
 python-multipart==0.0.20
 PyYAML==6.0.2
-rsa==4.9
+rsa==8.2
+qrcode==1.4.6
 six==1.17.0
 sniffio==1.3.1
 starlette==0.46.0
