--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ idna==3.10
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 passlib==1.7.4
+pillow==11.2.1
 pyasn1==0.4.8
 pydantic==2.10.6
 pydantic_core==2.27.2
